// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a completed todo correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        aria-disabled="false"
        class="MuiButtonBase-root MuiListItem-root makeStyles-listItemGreen-26 MuiListItem-dense MuiListItem-gutters MuiListItem-button"
        data-testid="todo-list-item-button"
        role="button"
        tabindex="0"
      >
        <div
          class="MuiListItemIcon-root makeStyles-listItemIcon-24"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-31 MuiCheckbox-root Component-root-29 PrivateSwitchBase-checked-32 Mui-checked Component-checked-30 MuiIconButton-edgeStart"
          >
            <span
              class="MuiIconButton-label"
            >
              <input
                aria-labelledby="checkbox-list-label-1"
                checked=""
                class="PrivateSwitchBase-input-34"
                data-indeterminate="false"
                tabindex="-1"
                type="checkbox"
                value=""
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                />
              </svg>
            </span>
          </span>
        </div>
        <div
          class="MuiListItemText-root makeStyles-ListItemTextCompleted-28 MuiListItemText-dense"
          id="checkbox-list-label-1"
        >
          <span
            class="MuiTypography-root MuiTypography-h5"
          >
            File 2020 Taxes
          </span>
        </div>
        <div
          class="MuiBox-root MuiBox-root-35"
          edge="end"
        >
          <span
            class="MuiTypography-root MuiTypography-h6"
          >
            3/10/2020
          </span>
        </div>
        <span
          class="MuiTouchRipple-root"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      aria-disabled="false"
      class="MuiButtonBase-root MuiListItem-root makeStyles-listItemGreen-26 MuiListItem-dense MuiListItem-gutters MuiListItem-button"
      data-testid="todo-list-item-button"
      role="button"
      tabindex="0"
    >
      <div
        class="MuiListItemIcon-root makeStyles-listItemIcon-24"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-31 MuiCheckbox-root Component-root-29 PrivateSwitchBase-checked-32 Mui-checked Component-checked-30 MuiIconButton-edgeStart"
        >
          <span
            class="MuiIconButton-label"
          >
            <input
              aria-labelledby="checkbox-list-label-1"
              checked=""
              class="PrivateSwitchBase-input-34"
              data-indeterminate="false"
              tabindex="-1"
              type="checkbox"
              value=""
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
              />
            </svg>
          </span>
        </span>
      </div>
      <div
        class="MuiListItemText-root makeStyles-ListItemTextCompleted-28 MuiListItemText-dense"
        id="checkbox-list-label-1"
      >
        <span
          class="MuiTypography-root MuiTypography-h5"
        >
          File 2020 Taxes
        </span>
      </div>
      <div
        class="MuiBox-root MuiBox-root-35"
        edge="end"
      >
        <span
          class="MuiTypography-root MuiTypography-h6"
        >
          3/10/2020
        </span>
      </div>
      <span
        class="MuiTouchRipple-root"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`should render a regular todo correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        aria-disabled="false"
        class="MuiButtonBase-root MuiListItem-root makeStyles-listItemGrey-14 MuiListItem-dense MuiListItem-gutters MuiListItem-button"
        data-testid="todo-list-item-button"
        role="button"
        tabindex="0"
      >
        <div
          class="MuiListItemIcon-root makeStyles-listItemIcon-13"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-20 MuiCheckbox-root Component-root-18 MuiIconButton-edgeStart"
          >
            <span
              class="MuiIconButton-label"
            >
              <input
                aria-labelledby="checkbox-list-label-4"
                class="PrivateSwitchBase-input-23"
                data-indeterminate="false"
                tabindex="-1"
                type="checkbox"
                value=""
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                />
              </svg>
            </span>
          </span>
        </div>
        <div
          class="MuiListItemText-root MuiListItemText-dense"
          id="checkbox-list-label-4"
        >
          <span
            class="MuiTypography-root MuiTypography-h5"
          >
            Walk the dog
          </span>
        </div>
        <span
          class="MuiTouchRipple-root"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      aria-disabled="false"
      class="MuiButtonBase-root MuiListItem-root makeStyles-listItemGrey-14 MuiListItem-dense MuiListItem-gutters MuiListItem-button"
      data-testid="todo-list-item-button"
      role="button"
      tabindex="0"
    >
      <div
        class="MuiListItemIcon-root makeStyles-listItemIcon-13"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-20 MuiCheckbox-root Component-root-18 MuiIconButton-edgeStart"
        >
          <span
            class="MuiIconButton-label"
          >
            <input
              aria-labelledby="checkbox-list-label-4"
              class="PrivateSwitchBase-input-23"
              data-indeterminate="false"
              tabindex="-1"
              type="checkbox"
              value=""
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              />
            </svg>
          </span>
        </span>
      </div>
      <div
        class="MuiListItemText-root MuiListItemText-dense"
        id="checkbox-list-label-4"
      >
        <span
          class="MuiTypography-root MuiTypography-h5"
        >
          Walk the dog
        </span>
      </div>
      <span
        class="MuiTouchRipple-root"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`should render an overdue todo correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        aria-disabled="false"
        class="MuiButtonBase-root MuiListItem-root makeStyles-listItemRed-4 MuiListItem-dense MuiListItem-gutters MuiListItem-button"
        data-testid="todo-list-item-button"
        role="button"
        tabindex="0"
      >
        <div
          class="MuiListItemIcon-root makeStyles-listItemIcon-1"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-8 MuiCheckbox-root Component-root-6 MuiIconButton-edgeStart"
          >
            <span
              class="MuiIconButton-label"
            >
              <input
                aria-labelledby="checkbox-list-label-5"
                class="PrivateSwitchBase-input-11"
                data-indeterminate="false"
                tabindex="-1"
                type="checkbox"
                value=""
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                />
              </svg>
            </span>
          </span>
        </div>
        <div
          class="MuiListItemText-root MuiListItemText-dense"
          id="checkbox-list-label-5"
        >
          <span
            class="MuiTypography-root MuiTypography-h5"
          >
            Feed the cat
          </span>
        </div>
        <div
          class="MuiBox-root MuiBox-root-12"
          edge="end"
        >
          <span
            class="MuiTypography-root MuiTypography-h6"
          >
            6/24/2020
          </span>
        </div>
        <span
          class="MuiTouchRipple-root"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      aria-disabled="false"
      class="MuiButtonBase-root MuiListItem-root makeStyles-listItemRed-4 MuiListItem-dense MuiListItem-gutters MuiListItem-button"
      data-testid="todo-list-item-button"
      role="button"
      tabindex="0"
    >
      <div
        class="MuiListItemIcon-root makeStyles-listItemIcon-1"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-8 MuiCheckbox-root Component-root-6 MuiIconButton-edgeStart"
        >
          <span
            class="MuiIconButton-label"
          >
            <input
              aria-labelledby="checkbox-list-label-5"
              class="PrivateSwitchBase-input-11"
              data-indeterminate="false"
              tabindex="-1"
              type="checkbox"
              value=""
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              />
            </svg>
          </span>
        </span>
      </div>
      <div
        class="MuiListItemText-root MuiListItemText-dense"
        id="checkbox-list-label-5"
      >
        <span
          class="MuiTypography-root MuiTypography-h5"
        >
          Feed the cat
        </span>
      </div>
      <div
        class="MuiBox-root MuiBox-root-12"
        edge="end"
      >
        <span
          class="MuiTypography-root MuiTypography-h6"
        >
          6/24/2020
        </span>
      </div>
      <span
        class="MuiTouchRipple-root"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
